# ByteOS-MicroKernel

./: .gitignore  ByteOS-MicroKernel.code-workspace  Cargo.toml  Makefile  README.md  microkernel.yaml
.cargo/: config.toml
crates/syscall_consts/: Cargo.toml
crates/syscall_consts/src/: lib.rs
microkernel/: .gitignore  Cargo.toml  build.rs  linker.lds.S
microkernel/src/: async_ops.rs  consts.rs  frame.rs  lang_items.rs  main.rs  message.rs  syscall.rs  task.rs  utils.rs
users/: Cargo.toml  Makefile  build.rs
users/.cargo/: config.toml
users/apps/vm/: Cargo.toml  build.rs
users/apps/vm/src/: main.rs  task.rs
users/linker/: linker-aarch64.ld  linker-riscv64.ld  linker-x86_64.ld
users/src/: console.rs  lib.rs  syscall.rs
