[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.9.0"
spin = { version = "0.9.8", features = ["mutex"] }
syscall_consts = { path = "../../../crates/syscall_consts" }
users = { path = "../.." }
